name: sstm
version: 0.1
license: BSD3
license-file: LICENSE
author: Mihaly Barasz <mihaly@barasz.com>, Gergely Risko <gergely@risko.hu>
maintainer: Mihaly Barasz <mihaly@barasz.com>, Gergely Risko <gergely@risko.hu>
build-type: Simple
cabal-version: >= 1.6
category: Concurrency
stability: experimental
homepage: http://github.com/klao/sstm
bug-reports: http://github.com/klao/sstm/issues
synopsis: STM wrapper that signals blocking

description:
  TODO

extra-source-files:
  README.md
  .gitignore

source-repository head
  type: git
  location: https://github.com/klao/sstm.git

library
  ghc-options: -Wall

  build-depends:
      base >= 4.6 && < 5
    , stm == 2.*
    , transformers

  exposed-modules:
    Control.Concurrent.SSTM
